--- a/src/app/shared/styles/admin-common.scss
+++ b/src/app/shared/styles/admin-common.scss
@@ -29,6 +29,10 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     border: 1px solid #e5e7eb;
 
+    &:first-child {
+      margin-bottom: 16px;
+    }
+
     h2 {
       font-size: 1.5rem;
       font-weight: 600;
